@@ -293,13 +293,12 @@ def handle_testCase(node):
 def handle_testSuite(node, level = 0):
     global nb_schemas_tests, nb_schemas_success, nb_schemas_failed
     global nb_instances_tests, nb_instances_success, nb_instances_failed
-    if level >= 1:
-	old_schemas_tests = nb_schemas_tests
-	old_schemas_success = nb_schemas_success
-	old_schemas_failed = nb_schemas_failed
-	old_instances_tests = nb_instances_tests
-	old_instances_success = nb_instances_success
-	old_instances_failed = nb_instances_failed
+    old_schemas_tests = nb_schemas_tests
+    old_schemas_success = nb_schemas_success
+    old_schemas_failed = nb_schemas_failed
+    old_instances_tests = nb_instances_tests
+    old_instances_success = nb_instances_success
+    old_instances_failed = nb_instances_failed
 
     docs = node.xpathEval('documentation')
     authors = node.xpathEval('author')
@@ -312,33 +311,22 @@ def handle_testSuite(node, level = 0):
 	    for author in authors:
 	        msg = msg + author.content + " "
 	print msg
-    sections = node.xpathEval('section')
-    if sections != [] and level <= 0:
-        msg = ""
-        for section in sections:
-	    msg = msg + section.content + " "
-        print "Tests for section %s" % (msg)
     for test in node.xpathEval('testCase'):
         handle_testCase(test)
     for test in node.xpathEval('testSuite'):
         handle_testSuite(test, level + 1)
 	        
-
-    if level >= 1 and sections != []:
-        msg = ""
-        for section in sections:
-	    msg = msg + section.content + " "
-        print "Result of tests for section %s" % (msg)
-        if nb_schemas_tests != old_schemas_tests:
-	    print "found %d test schemas: %d success %d failures" % (
-		  nb_schemas_tests - old_schemas_tests,
-		  nb_schemas_success - old_schemas_success,
-		  nb_schemas_failed - old_schemas_failed)
-	if nb_instances_tests != old_instances_tests:
-	    print "found %d test instances: %d success %d failures" % (
-		  nb_instances_tests - old_instances_tests,
-		  nb_instances_success - old_instances_success,
-		  nb_instances_failed - old_instances_failed)
+    print "Result of tests for %s" % (node.xpathEval('string(documentation)'))
+    if nb_schemas_tests != old_schemas_tests:
+	print "found %d test schemas: %d success %d failures" % (
+	      nb_schemas_tests - old_schemas_tests,
+	      nb_schemas_success - old_schemas_success,
+	      nb_schemas_failed - old_schemas_failed)
+    if nb_instances_tests != old_instances_tests:
+	print "found %d test instances: %d success %d failures" % (
+	      nb_instances_tests - old_instances_tests,
+	      nb_instances_success - old_instances_success,
+	      nb_instances_failed - old_instances_failed)
 #
 # Parse the conf file
 #
